@@ -60,20 +60,21 @@ subprojects {
 
     afterEvaluate {
         if (tasks.withType<ValidateTaskProperties>().isEmpty()) {
-            val validateTaskProperties = tasks.register("validateTaskProperties", ValidateTaskProperties::class.java) {
-                outputFile.set(project.the<ReportingExtension>().baseDirectory.file("task-properties/report.txt"))
+            val validateTaskProperties by tasks.registering(ValidateTaskProperties::class) {
+                outputFile.set(project.reporting.baseDirectory.file("task-properties/report.txt"))
 
-                val mainSourceSet = project.sourceSets[SourceSet.MAIN_SOURCE_SET_NAME]
-                classes = mainSourceSet.output.classesDirs
-                classpath = mainSourceSet.compileClasspath
+                val mainSourceSet = project.sourceSets.main.get()
+                classes.setFrom(mainSourceSet.output.classesDirs)
+                classpath.setFrom(mainSourceSet.compileClasspath)
                 dependsOn(mainSourceSet.output)
             }
-            tasks.named("check").configure { dependsOn(validateTaskProperties) }
+            tasks.check { dependsOn(validateTaskProperties) }
         }
     }
 
     tasks.withType<ValidateTaskProperties> {
         failOnWarning = true
+        enableStricterValidation = true
     }
 }
 
@@ -85,19 +86,28 @@ allprojects {
             url = uri("https://repo.gradle.org/gradle/libs")
         }
         maven {
-            name = "kotlin-eap"
-            url = uri("https://dl.bintray.com/kotlin/kotlin-eap")
+            name = "Gradle snapshot libs"
+            url = uri("https://repo.gradle.org/gradle/libs-snapshots")
         }
         maven {
-            name = "kotlin-dev"
-            url = uri("https://dl.bintray.com/kotlin/kotlin-dev")
+            name = "kotlin-eap"
+            url = uri("https://dl.bintray.com/kotlin/kotlin-eap")
         }
     }
 }
 
 dependencies {
     subprojects.forEach {
-        "runtime"(project(it.path))
+        runtime(project(it.path))
+    }
+}
+
+// Set gradlebuild.skipBuildSrcChecks Gradle property to "true" to disable all buildSrc verification tasks
+if (findProperty("gradlebuild.skipBuildSrcChecks") == "true") {
+    allprojects {
+        tasks.matching { it.group == LifecycleBasePlugin.VERIFICATION_GROUP }.configureEach {
+            enabled = false
+        }
     }
 }
 
@@ -142,7 +152,7 @@ fun readProperties(propertiesFile: File) = Properties().apply {
     }
 }
 
-val checkSameDaemonArgs = tasks.register("checkSameDaemonArgs") {
+val checkSameDaemonArgs by tasks.registering {
     doLast {
         val buildSrcProperties = readProperties(File(project.rootDir, "gradle.properties"))
         val rootProperties = readProperties(File(project.rootDir, "../gradle.properties"))
@@ -155,7 +165,7 @@ val checkSameDaemonArgs = tasks.register("checkSameDaemonArgs") {
     }
 }
 
-tasks.named("build").configure { dependsOn(checkSameDaemonArgs) }
+tasks.build { dependsOn(checkSameDaemonArgs) }
 
 fun Project.applyGroovyProjectConventions() {
     apply(plugin = "groovy")
@@ -182,10 +192,19 @@ fun Project.applyGroovyProjectConventions() {
         inputs.property("javaInstallation", "$vendor ${JavaVersion.current()}")
     }
 
-    val compileGroovy: TaskProvider<GroovyCompile> = tasks.withType(GroovyCompile::class.java).named("compileGroovy")
+    tasks.withType<Test>().configureEach {
+        if (JavaVersion.current().isJava9Compatible()) {
+            //allow ProjectBuilder to inject legacy types into the system classloader
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            jvmArgs("--illegal-access=deny")
+        }
+        
+    }
+
+    val compileGroovy by tasks.existing(GroovyCompile::class)
 
     configurations {
-        "apiElements" {
+        apiElements {
             outgoing.variants["classes"].artifact(
                 mapOf(
                     "file" to compileGroovy.get().destinationDir,
@@ -197,15 +216,8 @@ fun Project.applyGroovyProjectConventions() {
 }
 
 fun Project.applyKotlinProjectConventions() {
-    apply(plugin = "kotlin")
-
+    apply(plugin = "org.gradle.kotlin.kotlin-dsl")
     apply(plugin = "org.gradle.kotlin.ktlint-convention")
-
-    tasks.withType<KotlinCompile>().configureEach {
-        kotlinOptions {
-            freeCompilerArgs += listOf("-Xjsr305=strict")
-        }
-    }
 
     plugins.withType<KotlinDslPlugin> {
         kotlinDslPluginOptions {
